# physical_reasoning_toolkit

./: .gitignore  ANNOTATION.md  CHANGELOG.md  CITATION.bib  CITATION.cff  CORE.md  DATASETS.md  EVALUATION.md  LICENSE  LLM_PROVIDERS.md  MANIFEST.in  MODEL_PROVIDERS.md  NORMALIZATION.md  README.md  RELEASE_NOTES.md  pyproject.toml  test_installation.py
.github/: config.yml
cookbooks/: 01_load_dataset.py  02_automated_annotation.py  03_environment_variables.py  03_supervised_annotation.py  04_environment_variables_demo.py  04_workflow_composition_demo.py  05_answer_comparison_demo.py  06_domain_only_workflow_demo.py  07_theorem_detect_workflow_demo.py  08_theorem_review_workflow_demo.py  README.md  inference_deepseek.py  inference_gemini.py  inference_ollama.py  inference_openai.py  inference_seephys_structured.py  inference_single_with_answer_tags.py  load_dataset.py  physics_problem_inference.py  requirement.txt
physkit/: README.md  pyproject.toml  requirements.txt  setup.py
physkit/physkit/: llm.py
physkit/physkit/definitions/: answer_types.py
physkit/physkit/models/: __init__.py  physics_dataset.py  physics_problem.py  physics_problem_metadata.py
physkit/physkit_annotation/: __init__.py  full_physics_annotation.py
physkit/physkit_annotation/annotations/: domain.py
physkit/physkit_annotation/annotators/: __init__.py  base.py  domain.py  final_answer.py  theorem.py  variable.py
physkit/physkit_annotation/assessment/: __init__.py  base_assessor.py  domain_assessor.py
physkit/physkit_annotation/revision/: __init__.py  base_revisor.py  domain_revisor.py
physkit/physkit_annotation/scripts/: test_logging.py  test_progress_bar.py
physkit/physkit_annotation/workers/: base.py
physkit/physkit_annotation/workflows/: __init__.py  annotation_workflow.py  base.py  supervised_annotation_workflow.py  workflow_composer.py
physkit/physkit_annotation/workflows/modules/: __init__.py  base_module.py  compute_answer_module.py  detect_theorem_module.py  domain_assessment_module.py  extract_variable_module.py  identify_theorem_module.py  label_domain_module.py  review_theorem_module.py
physkit/physkit_annotation/workflows/presets/: __init__.py  domain_only_workflow.py  plain_auto_workflow.py
physkit/physkit_core/: __init__.py  llm.py  logging_config.py
physkit/physkit_core/definitions/: answer_types.py  physics_domain.py
physkit/physkit_core/models/: __init__.py  physics_dataset.py  physics_problem.py  physics_solution.py
physkit/physkit_datasets/: README.md  hub.py
physkit/physkit_datasets/hub/: __init__.py
physkit/physkit_datasets/loaders/: __init__.py  base_loader.py  jeebench.py  phybench.py  physreason.py  scibench.py  seephys.py  tpbench.py  ugphysics.py
physkit/physkit_evaluation/: README.md  __init__.py  example_usage.py
physkit/physkit_evaluation/comparison/: __init__.py  answer_comparator.py  base.py  numerical.py  option.py  symbolic.py  textual.py
physkit/physkit_evaluation/metrics/: accuracy.py  base.py
scripts/: evaluate_inference_exact_match.py  evaluate_inference_normalized_match.py  extract_model_answers.py
showcase_output/automated_annotation/: plain_automatic_workflow_results.json  plain_automatic_workflow_workflow_status.json
showcase_output/dataset_exploration/: jeebench_sample_problems.json  jeebench_summary.txt  phybench_sample_problems.json  phybench_summary.txt  physreason_sample_problems.json  physreason_summary.txt  scibench_sample_problems.json  scibench_summary.txt  tpbench_sample_problems.json  tpbench_summary.txt  ugphysics_sample_problems.json  ugphysics_summary.txt
showcase_output/domain_workflow_output/: domain_only_annotation_status.json
showcase_output/domain_workflow_output/execution_flows/: problem_208_execution_flow.json
showcase_output/domain_workflow_output/results/: problem_208_result.json
showcase_output/supervised_annotation/: supervised_anno_statistics.json
showcase_output/supervised_annotation/domain_annotation_step/: 4449.json
showcase_output/theorem_detect_workflow_demo/: theorem_label_only_workflow_status.json
showcase_output/theorem_detect_workflow_demo/results/: problem_140_result.json  problem_450_result.json  problem_709_result.json
showcase_output/theorem_review_output/: theorem_review_demo_status.json
showcase_output/theorem_review_output/results/: problem_450_result.json
showcase_output/workflow_composition_demo/: domain_assessment_demo_results.json  domain_assessment_demo_workflow_statistics.json
src/physkit/: __init__.py
src/physkit/physkit_annotation/: __init__.py
src/physkit/physkit_core/: __init__.py  llm.py  logging_config.py
src/physkit/physkit_datasets/: __init__.py  hub.py  utils.py
src/physkit/physkit_evaluation/: __init__.py  example_usage.py
src/prkit/: __init__.py
src/prkit/prkit_annotation/: __init__.py
src/prkit/prkit_core/: __init__.py  llm.py  logging_config.py
src/prkit/prkit_datasets/: README.md  __init__.py  citations.py  hub.py  utils.py
tests/: __init__.py  conftest.py
tests/physkit/: __init__.py
tests/prkit/: __init__.py
(+225 files in other folders)
