[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "physical-reasoning-toolkit"
version = "0.1.0.post19"
description = "Physical Reasoning Toolkit"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
authors = [
    {name = "Yinghuan Zhang", email = "yinghuan.flash@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.1",
    "numpy>=2.2.6",
    "openai>=1.99.9",
    "pydantic>=2.11.7",
    "tqdm>=4.67.1",
    "google-genai>=1.0.0",
    "sympy>=1.14.0",
    "python-dotenv>=1.0.0",
    "latex2sympy2-extended>=1.0.0",
    "pyarrow>=14.0.0",
    "datasets>=2.14.0",
    "Pillow>=10.0.0",
    "pip>=26.0",
    "ollama>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "myst-parser>=1.0.0",
    "sphinx-rtd-theme>=1.0.0",
]
all = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "sphinx>=5.0.0",
    "myst-parser>=1.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/sherryzyh/physical_reasoning_toolkit"
Documentation = "https://github.com/sherryzyh/physical_reasoning_toolkit#readme"
Repository = "https://github.com/sherryzyh/physical_reasoning_toolkit"
Issues = "https://github.com/sherryzyh/physical_reasoning_toolkit/issues"



[tool.setuptools.packages.find]
where = ["src"]
include = ["prkit*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.rst"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=prkit",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
