[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "physkit"
version = "0.1.0"
description = "Physical Reasoning Toolkit - Core Package"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "PhysKit Contributors", email = "physkit@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.1",
    "numpy>=2.3.2",
    "openai>=1.99.9",
    "pydantic>=2.11.7",
    "tqdm>=4.67.1",
    "google-generativeai>=0.8.5",
    "sympy>=1.14.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "myst-parser>=1.0.0",
    "sphinx-rtd-theme>=1.0.0",
]
all = [
    "physkit-annotation",
    "physkit-datasets", 
    "physkit-evaluation",
]

[project.urls]
Homepage = "https://github.com/physkit/physkit"
Documentation = "https://physkit.readthedocs.io"
Repository = "https://github.com/physkit/physkit"
Issues = "https://github.com/physkit/physkit/issues"



[tool.setuptools.packages.find]
where = ["."]
include = ["physkit*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.rst"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=physkit",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
